--- a/frontend/smart-map/src/App.css
+++ b/frontend/smart-map/src/App.css
@@ -42,3 +42,12 @@
   padding-right: 3em;
   margin-top: 3em;
 }
+
+/* for testing circle.svg 
+   link
+    https://www.w3docs.com/snippets/css/how-to-create-an-svg-drop-shadow.html
+*/
+.shadow {
+  -webkit-filter: drop-shadow( 4px 4px 3px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 4px 4px 3px rgba(0, 0, 0, .7));
+}
